--- a/argocd/apps/calculator/argocd-app.yaml
+++ b/argocd/apps/calculator/argocd-app.yaml
@@ -1,18 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: calculator-app
+  name: calculator-python-app
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/AvikBhattacharya-Secops/complete-project-all.git
+    repoURL: https://github.com/AvikBhattacharya-Secops/test-deploy-app.git
     path: helm
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
     namespace: default
-  syncPolicy:
-    automated:
+  syncPolicy: true
+    automated: true
       prune: true
       selfHeal: true
+
